[tool.poetry]
name = "schema-docs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bidsschematools"}]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "5.3.0"
myst-parser = "0.18.1"
mkdocs-material = ">=5.4"
sphinx-rtd-theme = "1.1.1"
importlib-resources = "5.10.0"
pandas = "1.5.1"
tabulate = "0.9.0"
alabaster = "0.7.12"
Babel = "2.11.0"
certifi = "2022.9.24"
charset-normalizer = "2.1.1"
click = "8.1.3"
docutils = "0.17.1"
ghp-import = "2.1.0"
idna = "3.4"
imagesize = "1.4.1"
importlib-metadata = "5.0.0"
Jinja2 = "3.1.2"
Markdown = "3.3.7"
markdown-it-py = "2.1.0"
MarkupSafe = "2.1.1"
mdit-py-plugins = "0.3.1"
mdurl = "0.1.2"
mergedeep = "1.3.4"
mkdocs = ">=1.1"
mkdocs-material-extensions = "1.1.1"
numpy = "1.23.5"
packaging = "21.3"
Pygments = "2.13.0"
pymdown-extensions = ">=7.0.0"
pyparsing = "3.0.9"
python-dateutil = "2.8.2"
pytz = "2022.6"
PyYAML = "6.0"
pyyaml_env_tag = "0.1"
requests = "2.28.1"
six = "1.16.0"
snowballstemmer = "2.2.0"
sphinxcontrib-applehelp = "1.0.2"
sphinxcontrib-devhelp = "1.0.2"
sphinxcontrib-htmlhelp = "2.0.0"
sphinxcontrib-jsmath = "1.0.1"
sphinxcontrib-qthelp = "1.0.3"
sphinxcontrib-serializinghtml = "1.1.5"
typing-extensions = "4.4.0"
urllib3 = "1.26.12"
watchdog = "2.1.9"
zipp = "3.10.0"
mkdocs-branchcustomization-plugin = ">=0.1.3,<0.2.0"
mkdocs-macros-plugin = "^0.7.0"
mkdocs-redirects = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
